--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,103 @@
-<h2>Sign up</h2>
+<section class="hero is-primary is-bold">
+  <div class="hero-body">
+    <div class="columns">
+      
+      <div class="column mx-6 has-text-centered">
+        <p class="title is-size-1">Odin Facebook</p>
+        <div class="hero mt-6">
+          <div class="hero-body"></div>
+        </div>
+        <div class="block">
+          <p class="title mt-6">See the latest posts.</p>
+        </div>
+        <div class="block">
+          <p class="title mt-6">Add friends to follow their activity.</p>
+        </div>
+        <div class="block">
+          <p class="title mt-6 mb-6">Join the conversation.</p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="container box">
+        <p class="title has-text-centered has-text-dark">Sign Up</p>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field">
+            <%= f.label :first_name, class: "label" %><br />
+            <div class="control has-icons-left">
+              <%= f.text_field :first_name, autofocus: true, autocomplete: "first-name", class: "input" %>
+              <span class="icon is-small is-left">
+                <i class="fas fa-user"></i>
+              </span>
+            </div>
+          </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first-name" %>
+          <div class="field">
+            <%= f.label :last_name, class: "label" %><br />
+            <div class="control has-icons-left">
+              <%= f.text_field :last_name, autofocus: true, autocomplete: "last-name", class: "input" %>
+              <span class="icon is-small is-left">
+                <i class="fas fa-user"></i>
+              </span>
+            </div>
+          </div>
+
+          <div class="field">
+            <%= f.label :email, class: "label" %><br />
+            <div class="control has-icons-left">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
+              <span class="icon is-small is-left">
+                <i class="fas fa-envelope"></i>
+              </span>
+            </div>
+          </div>
+
+          <div class="field">
+            <%= f.label :password, class: "label" %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <div class="control has-icons-left">
+              <%= f.password_field :password, autocomplete: "new-password", class: "input" %>
+              <span class="icon is-small is-left">
+                <i class="fas fa-lock"></i>
+              </span>
+            </div>
+          </div>
+
+          <div class="field">
+            <%= f.label :password_confirmation, class: "label" %><br />
+            <div class="control has-icons-left">
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
+              <span class="icon is-small is-left">
+                <i class="fas fa-lock"></i>
+              </span>
+            </div>
+          </div>
+
+          <div class="actions has-text-centered">
+            <div class="container">
+              <%= f.submit "Sign up", class: "button is-primary" %>
+            </div>
+
+            <p class="mt-3">Or sign up with Facebook</p>
+            <button class="button is-link">
+              <span class="icon">
+                <i class="fab fa-facebook-square"></i>
+              </span>
+              <span>Sign Up</span>
+            </button>
+          </div>
+
+          <div class="container has-text-centered mt-6">
+            <p>Already have an account?</p>
+            <a href="<%= new_user_session_path %>" class="button is-small">Sign In</a>
+          </div>
+
+      <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last-name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
