--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,68 @@
     <title>OdinFacebook</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/729a72d977.js" crossorigin="anonymous"></script>
+    <style><%= yield :stylesheets %></style>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <nav class="navbar">
+      <div class="navbar-brand">
+        <% if user_signed_in? %>
+          <a href="<%= authenticated_root_path %>" class="navbar-item">
+            <p class="title">Odin Facebook</p>
+          </a>
+        <% else %>
+          <a href="<%= unauthenticated_root_path %>" class="navbar-item">
+            <p class="title">Odin Facebook</p>
+          </a>
+        <% end %>
+
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar-links">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
+      <div id="navbar-links" class="navbar-menu">
+        <div class="navbar-start">
+          <a href="<%= posts_path %>" class="navbar-item">Posts</a>
+          <a href="<%= posts_path %>" class="navbar-item">Fooish</a>
+          <a href="<%= posts_path %>" class="navbar-item">Barish</a>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <a href="" class="navbar-link">More</a>
+
+            <div class="navbar-dropdown">
+              <a href="" class="navbar-item">About</a>
+            </div>
+            
+          </div>
+        </div>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a href="<%= destroy_user_session_path %>"class="button is-primary" data-method="delete">
+                <strong>Sign Out</strong>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <% if notice%>
+      <div class="notification is-primary">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+    <% if alert %>
+      <div class="notification is-primary">
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
