--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -6,31 +6,38 @@
         </p>
         </figure>
         <div class="media-content">
-        <div class="content">
-            <p>
-            <strong><%= post.user.full_name %></strong>
-            <small><%= distance_of_time_in_words(Time.now, post.created_at) %> ago</small>
-            </p>
-            <p><%= post.body %></p>
-        </div>
-        <nav class="level is-mobile">
-            <div class="level-left">
-            <a href="" class="level-item">
-                <span class="icon"><i class="far fa-heart"></i></span>
-            </a>
-            <a href="" class="level-item">
-                <span class="icon"><i class="far fa-comment-dots"></i></span>
-            </a>
-            <% if user_signed_in? && current_user.id == post.user_id %>
-                <a href="<%= edit_post_path(post) %>" class="level-item">
-                <span class="icon"><i class="far fa-edit"></i></span>
-                </a>
-                <a href="<%= post_path(post) %>" class="level-item" data-method="delete" data-confirm="Are you sure you want to delete this post?">
-                <span class="icon has-text-danger"><i class="far fa-trash-alt"></i></span>
-                </a>
-            <% end %>
+            <div class="content">
+                <% if current_user.id != post.user.id %>
+                    <a href="<%= friend_requests_path(friend_request: { receiving_user_id: post.user.id, sending_user_id: current_user.id }) %>" data-method="post">
+                        <span class="icon"><i class="fas fa-user-plus"></i></span>
+                    </a>
+                <% end %>
+
+                <!-- AFTER ADDING FRIENDS FEATURE: Different icon here if user of post is friend of current_user -->
+
+                <strong><%= post.user.full_name %></strong>
+                <small><%= distance_of_time_in_words(Time.now, post.created_at) %> ago</small>
+                </p>
+                <p><%= post.body %></p>
             </div>
-        </nav>
+            <nav class="level is-mobile">
+                <div class="level-left">
+                <a href="" class="level-item">
+                    <span class="icon"><i class="far fa-heart"></i></span>
+                </a>
+                <a href="" class="level-item">
+                    <span class="icon"><i class="far fa-comment-dots"></i></span>
+                </a>
+                <% if user_signed_in? && current_user.id == post.user_id %>
+                    <a href="<%= edit_post_path(post) %>" class="level-item">
+                    <span class="icon"><i class="far fa-edit"></i></span>
+                    </a>
+                    <a href="<%= post_path(post) %>" class="level-item" data-method="delete" data-confirm="Are you sure you want to delete this post?">
+                    <span class="icon has-text-danger"><i class="far fa-trash-alt"></i></span>
+                    </a>
+                <% end %>
+                </div>
+            </nav>
         </div>
     </article>
 <% end %>
