--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -2,7 +2,9 @@
     <div class="box mx-6 my-6">
         <p class="title has-text-centered">Your Friend Requests</p>
         <div class="level">
-            <% @sending_users.each do |user| %>
+            <% @friend_requests.each do |request| %>
+                <% user = User.find(request.sending_user_id) %>
+
                 <div class="level-left">
                     <div class="level-item has-text-centered">
                         <p class="image is-64x64">
@@ -24,7 +26,7 @@
                         </a>
                     </div>
                     <div class="level-item has-text-centered">
-                        <a href="" class="button is-danger">
+                        <a href="<%= friend_request_path(request) %>" class="button is-danger" data-method="delete">
                             <span class="icon is-large"><i class="far fa-times-circle fa-2x"></i></span>
                             <span>Decline</span>
                         </a>
