--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -1,9 +1,9 @@
 <% @posts.each do |post| %>
     <article class="media">
         <figure class="media-left">
-        <p class="image is-64x64">
-            <img src="https://bulma.io/images/placeholders/128x128.png">
-        </p>
+            <p class="image is-64x64">
+                <img src="https://bulma.io/images/placeholders/128x128.png">
+            </p>
         </figure>
         <div class="media-content">
             <div class="content">
@@ -24,31 +24,52 @@
             </div>
             <nav class="level is-mobile">
                 <div class="level-left">
-                <% if current_user.id != post.user_id %>
-                    <% if current_user.liked_posts.any? { |liked_post| liked_post.id == post.id } %>
-                        <a href="<%= like_path(Like.find_by(user_id: current_user.id, post_id: post.id)) %>" data-method="delete" class="level-item">
-                        <span class="icon"><i class="fas fa-heart is-danger"></i></span>
+                    <% if current_user.id != post.user_id %>
+                        <% if current_user.liked_posts.any? { |liked_post| liked_post.id == post.id } %>
+                            <a href="<%= like_path(Like.find_by(user_id: current_user.id, post_id: post.id)) %>" data-method="delete" class="level-item">
+                            <span class="icon"><i class="fas fa-heart is-danger"></i></span>
+                            </a>
+                        <% else %>
+                            <a href="<%= likes_path(like: { user_id: current_user.id, post_id: post.id }) %>" data-method="post" class="level-item">
+                            <span class="icon"><i class="far fa-heart"></i></span>
+                            </a>
+                        <% end %>
+                    <% end %>
+                    
+                    <% if user_signed_in? && current_user.id == post.user_id %>
+                        <a href="<%= edit_post_path(post) %>" class="level-item">
+                        <span class="icon"><i class="far fa-edit"></i></span>
                         </a>
-                    <% else %>
-                        <a href="<%= likes_path(like: { user_id: current_user.id, post_id: post.id }) %>" data-method="post" class="level-item">
-                        <span class="icon"><i class="far fa-heart"></i></span>
+                        <a href="<%= post_path(post) %>" class="level-item" data-method="delete" data-confirm="Are you sure you want to delete this post?">
+                        <span class="icon has-text-danger"><i class="far fa-trash-alt"></i></span>
                         </a>
                     <% end %>
-                <% end %>
-                
-                <a href="" class="level-item">
-                    <span class="icon"><i class="far fa-comment-dots"></i></span>
-                </a>
-                <% if user_signed_in? && current_user.id == post.user_id %>
-                    <a href="<%= edit_post_path(post) %>" class="level-item">
-                    <span class="icon"><i class="far fa-edit"></i></span>
-                    </a>
-                    <a href="<%= post_path(post) %>" class="level-item" data-method="delete" data-confirm="Are you sure you want to delete this post?">
-                    <span class="icon has-text-danger"><i class="far fa-trash-alt"></i></span>
-                    </a>
-                <% end %>
                 </div>
             </nav>
-        </div>
-    </article>
+
+            <%= render partial: "comments/form", locals: { post_id: post.id } %>
+            <br>
+
+            <% if post.comments.any? %>
+                <% post.comments.each do |comment| %>
+                    <article class="media">
+                        <figure class="media-left">
+                            <p class="image is-64x64">
+                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                            </p>
+                        </figure>
+                        <div class="media-content">
+                            <div class="content">
+                                <p>
+                                    <strong><%= comment.creator.full_name %></strong>
+                                    <br>
+                                    <%= comment.body %>
+                                    <br>
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                <% end %>
+            <% end %>
+    </article>  
 <% end %>
