--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,8 @@
       </div>
       <div id="navbar-links" class="navbar-menu">
         <div class="navbar-start">
-          <a href="<%= posts_path %>" class="navbar-item">Posts</a>
-          <a href="<%= posts_path %>" class="navbar-item">Fooish</a>
-          <a href="<%= posts_path %>" class="navbar-item">Barish</a>
+          <a href="<%= posts_path %>" class="navbar-item">Explore</a>
+          <a href="<%= my_feed_path %>" class="navbar-item">My Feed</a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a href="" class="navbar-link">More</a>
 
