--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -2,7 +2,11 @@
     <article class="media">
         <figure class="media-left">
             <p class="image is-64x64">
-                <img src="https://bulma.io/images/placeholders/128x128.png">
+                <% if post.user.profile_picture.attached? %>
+                    <%= image_tag(post.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                <% else %>
+                    <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
+                <% end %>
             </p>
         </figure>
         <div class="media-content">
@@ -55,7 +59,11 @@
                     <article class="media">
                         <figure class="media-left">
                             <p class="image is-64x64">
-                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                                <% if comment.user.profile_picture.attached? %>
+                                    <%= image_tag(comment.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                                <% else %>
+                                    <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
+                                <% end %>
                             </p>
                         </figure>
                         <div class="media-content">
