--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,15 @@
         <div class="columns is-mobile is-centered">
             <div class="column is-narrow">
                 <div class="container">
-                    <figure class="image is-128x128">
-                        <img src="https://bulma.io/images/placeholders/128x128.png">
-                    </figure>
+                    <% if @user.profile_picture.attached? %>
+                        <figure class="image is-128x128">
+                            <%= image_tag(current_user.profile_picture.variant(resize_to_fill: [128, 128]), class: "is-rounded") %>
+                        </figure>
+                    <% else %>
+                        <figure class="image is-128x128">
+                            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                        </figure>
+                    <% end %>
                 </div>
             </div>
         </div>
