--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,74 @@
 <section>
-    <div class="container box mt-6">
-        <% if current_user.id == @user.id %>
-            <p class="title has-text-centered mb-6">My Profile</p>
-        <% else %>
-            <p class="title has-text-centered mb-6"><%= @user.full_name %>'s Profile</p>
-        <% end %>
+    <div class="columns">
+        <div class="column mt-6">
+            <div class="container box has-text-centered">
+                <p class="title">Friends</p>
 
-        <div class="columns is-mobile is-centered">
-            <div class="column is-narrow">
-                <div class="container">
-                    <% if @user.profile_picture.attached? %>
-                        <figure class="image is-128x128">
-                            <%= image_tag(@user.profile_picture.variant(resize_to_fill: [128, 128]), class: "is-rounded") %>
-                        </figure>
-                    <% else %>
-                        <figure class="image is-128x128">
-                            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-                        </figure>
-                    <% end %>
-                </div>
+                <% @user.friends.each do |friend| %>
+                    <a href="<%= user_path(friend.id) %>">
+                        <div class="columns is-mobile is-centered">
+                            <div class="column is-narrow">
+                                <% if friend.profile_picture.attached? %>
+                                    <figure class="image is-64x64 level-item">
+                                        <%= image_tag(friend.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                                    </figure>
+                                <% else %>
+                                        <figure class="image is-64x64 level-item">
+                                        <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                                    </figure>
+                                <% end %>
+                            </div>
+                        </div>
+
+                        <p class="mb-4"><%= friend.full_name %></p>
+                    </a>
+                <% end %>
             </div>
         </div>
-        <p class="has-text-centered is-size-5"><strong><%= @user.full_name %></strong></p>
-        <p class="has-text-centered"><%= @user.email %></p>
 
-        <% if current_user.id == @user.id %>
-            <%= render "users/form" %>
-        <% end %>
-    </div>
+        <div class="column">
+            <div class="container box mt-6">
+                <% if current_user.id == @user.id %>
+                    <p class="title has-text-centered mb-6">My Profile</p>
+                <% else %>
+                    <p class="title has-text-centered mb-6"><%= @user.full_name %>'s Profile</p>
+                <% end %>
+
+                <!-- For Profile Picture Centering -->
+                <div class="columns is-mobile is-centered">
+                    <div class="column is-narrow">
+                        <div class="container">
+                            <% if @user.profile_picture.attached? %>
+                                <figure class="image is-128x128">
+                                    <%= image_tag(@user.profile_picture.variant(resize_to_fill: [128, 128]), class: "is-rounded") %>
+                                </figure>
+                            <% else %>
+                                <figure class="image is-128x128">
+                                    <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                                </figure>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="has-text-centered is-size-5"><strong><%= @user.full_name %></strong></p>
+                <p class="has-text-centered"><%= @user.email %></p>
+
+                <% if current_user.id == @user.id %>
+                    <%= render "users/form" %>
+                <% end %>
+            </div>
+        </div>
+
+        <div class="column mt-6">
+            <div class="container has-text-centered">
+                <div class="box">
+                    <div class="title">Posts</div>
+                </div>
+            </div>
+            
+        </div>
+    </div> 
 </section>
 
 
