--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -2,17 +2,22 @@
     <div class="box mx-6 my-6">
         <p class="title has-text-centered">Received Friend Requests</p>
         <% @friend_requests.each do |request| %>
-            <% user = User.find(request.sending_user_id) %>
+            <% sending_user = User.find(request.sending_user_id) %>
+
             <div class="level">
                 <div class="level-left">
                     <div class="level-item has-text-centered">
                         <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
+                            <% if sending_user.profile_picture.attached? %>
+                                <%= image_tag(sending_user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                            <% else %>
+                                <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
+                            <% end %>
                         </p>
                     </div>
                     <div class="level-item has-text-centered">
                         <p class="subtitle">
-                            <%= user.full_name %>
+                            <%= sending_user.full_name %>
                         </p>
                     </div>
                 </div>
