--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -7,7 +7,11 @@
                 <div class="level-left">
                     <div class="level-item has-text-centered">
                         <p class="image is-64x64">
-                            <img src="https://bulma.io/images/placeholders/128x128.png">
+                            <% if friend.profile_picture.attached? %>
+                                <%= image_tag(friend.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                            <% else %>
+                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                            <% end %>
                         </p>
                     </div>
                     <div class="level-item has-text-centered">
