add users page with search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
         <div class="navbar-start">
           <a href="<%= posts_path %>" class="navbar-item">Explore</a>
           <a href="<%= my_feed_path %>" class="navbar-item">My Feed</a>
+          <a href="<%= users_path %>" class="navbar-item">Users</a>
           <div class="navbar-item has-dropdown is-hoverable">
             <a href="" class="navbar-link">More</a>
 
