--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -10,7 +10,7 @@
                             <% if friend.profile_picture.attached? %>
                                 <%= image_tag(friend.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
                             <% else %>
-                                <img src="https://bulma.io/images/placeholders/128x128.png">
+                                <img src="https://bulma.io/images/placeholders/128x128.png" class="is-rounded">
                             <% end %>
                         </p>
                     </div>
