--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -1,13 +1,15 @@
 <% @posts.each do |post| %>
     <article class="media">
         <figure class="media-left">
-            <p class="image is-64x64">
-                <% if post.user.profile_picture.attached? %>
-                    <%= image_tag(post.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                <% else %>
-                    <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
-                <% end %>
-            </p>
+            <a href="<%= user_path(post.user) %>">
+                <p class="image is-64x64">
+                    <% if post.user.profile_picture.attached? %>
+                        <%= image_tag(post.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                    <% else %>
+                        <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
+                    <% end %>
+                </p>
+            </a>
         </figure>
         <div class="media-content">
             <div class="content">
@@ -21,7 +23,9 @@
                     <span class="icon"><i class="fas fa-user-friends"></i></span>
                 <% end %>
 
-                <strong><%= post.user.full_name %></strong>
+                <a href="<%= user_path(post.user) %>">
+                    <strong><%= post.user.full_name %></strong>
+                </a>
                 <small><%= distance_of_time_in_words(Time.now, post.created_at) %> ago</small>
                 </p>
                 <p><%= post.body %></p>
@@ -58,18 +62,23 @@
                 <% post.comments.each do |comment| %>
                     <article class="media">
                         <figure class="media-left">
-                            <p class="image is-64x64">
-                                <% if comment.user.profile_picture.attached? %>
-                                    <%= image_tag(comment.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                                <% else %>
-                                    <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
-                                <% end %>
-                            </p>
+                            <a href="<%= user_path(comment.creator) %>">
+                                <p class="image is-64x64">
+                                    <% if comment.user.profile_picture.attached? %>
+                                        <%= image_tag(comment.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
+                                    <% else %>
+                                        <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
+                                    <% end %>
+                                </p>
+                            </a>
                         </figure>
                         <div class="media-content">
                             <div class="content">
                                 <p>
-                                    <strong><%= comment.creator.full_name %></strong>
+                                    <a href="<%= user_path(comment.creator) %>">
+                                        <strong><%= comment.creator.full_name %></strong>
+                                    </a>
+                                    <small><%= distance_of_time_in_words(Time.now, comment.created_at)%> ago</small>
                                     <br>
                                     <%= comment.body %>
                                     <br>
