--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -82,12 +82,12 @@
             </div>
 
             <p class="mt-3">Or sign up with Facebook</p>
-            <button class="button is-link">
+            <a href="<%= user_facebook_omniauth_authorize_path %>" class="button is-link">
               <span class="icon">
                 <i class="fab fa-facebook-square"></i>
               </span>
               <span>Sign Up</span>
-            </button>
+            </a>
           </div>
 
           <div class="container has-text-centered mt-6">
