--- a/app/views/friend_requests/index.html.erb
+++ b/app/views/friend_requests/index.html.erb
@@ -8,11 +8,7 @@
                 <div class="level-left">
                     <div class="level-item has-text-centered">
                         <p class="image is-64x64">
-                            <% if sending_user.profile_picture.attached? %>
-                                <%= image_tag(sending_user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                            <% else %>
-                                <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
-                            <% end %>
+                            <%= image_tag sending_user.primary_profile_picture, class: "is-rounded" %>
                         </p>
                     </div>
                     <div class="level-item has-text-centered">
