--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -8,11 +8,7 @@
                     <div class="level-item has-text-centered">
                         <a href="<%= user_path(friend) %>">
                             <p class="image is-64x64">
-                                <% if friend.profile_picture.attached? %>
-                                    <%= image_tag(friend.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                                <% else %>
-                                    <img src="https://bulma.io/images/placeholders/128x128.png" class="is-rounded">
-                                <% end %>
+                                <%= image_tag friend.primary_profile_picture, class: "is-rounded" %>
                             </p>
                         </a>
                     </div>
