--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -3,11 +3,7 @@
         <figure class="media-left">
             <a href="<%= user_path(post.user) %>">
                 <p class="image is-64x64">
-                    <% if post.user.profile_picture.attached? %>
-                        <%= image_tag(post.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                    <% else %>
-                        <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
-                    <% end %>
+                    <%= image_tag post.user.primary_profile_picture, class: "is-rounded" %>
                 </p>
             </a>
         </figure>
@@ -64,11 +60,7 @@
                         <figure class="media-left">
                             <a href="<%= user_path(comment.creator) %>">
                                 <p class="image is-64x64">
-                                    <% if comment.user.profile_picture.attached? %>
-                                        <%= image_tag(comment.user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                                    <% else %>
-                                        <img src="https://bulma.io/images/placeholders/64x64.png" class="is-rounded">
-                                    <% end %>
+                                    <%= image_tag comment.user.primary_profile_picture, class: "is-rounded" %>
                                 </p>
                             </a>
                         </figure>
