--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,11 +22,7 @@
                         <div class="level">
                             <div class="level-item has-text-centered">
                                 <p class="image is-64x64">
-                                    <% if user.profile_picture.attached? %>
-                                        <%= image_tag(user.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                                    <% else %>
-                                        <img src="https://bulma.io/images/placeholders/128x128.png" class="is-rounded">
-                                    <% end %>
+                                    <%= image_tag user.primary_profile_picture, class: "is-rounded" %>
                                 </p>
                             </div>
                             <div class="level-item has-text-centered">
