update styling for main feed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,11 @@
 .navbar {
     border-bottom: 1px solid hsl(0, 0%, 86%);
 }
+
+.is-like {
+    color: rgb(230, 109, 129);
+}
+
+.invisible {
+    display: none;
+}
