--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="actions mt-5">
-      <%= form.submit "Post", class: "button is-primary" %>
+      <%= form.submit class: "button is-primary" %>
     </div>
   <% end %>
 </div>
