--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,3 +11,6 @@
   <% end %>
   <%= render "posts/feed" %>
 </section>
+
+<%= javascript_pack_tag 'comment_form' %>
+<%= javascript_pack_tag 'edit_post_form' %>
