--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -24,25 +24,38 @@
                 </a>
                 <small><%= distance_of_time_in_words(Time.now, post.created_at) %> ago</small>
                 </p>
-                <p><%= post.body %></p>
+
+                <% if post.user_id == current_user.id %>
+                    <div class="container edit-post-form invisible">
+                        <%= render "form", post: post %>
+                    </div>
+                <% end %>
+
+                <p class="post-body"><%= post.body %></p>
+                
             </div>
             <nav class="level is-mobile">
                 <div class="level-left">
+
+                    <a class="level-item comment-button">
+                        <span class="icon"><i class="far fa-comment-dots"></i></span>
+                    </a>
+                
                     <% if current_user.id != post.user_id %>
                         <% if current_user.liked_posts.any? { |liked_post| liked_post.id == post.id } %>
                             <a href="<%= like_path(Like.find_by(user_id: current_user.id, post_id: post.id)) %>" data-method="delete" class="level-item">
-                            <span class="icon"><i class="fas fa-heart is-danger"></i></span>
+                            <span class="icon"><i class="fas fa-heart is-like"></i></span>
                             </a>
                         <% else %>
-                            <a href="<%= likes_path(like: { user_id: current_user.id, post_id: post.id }) %>" data-method="post" class="level-item">
+                            <a href="<%= likes_path(like: { user_id: current_user.id, post_id: post.id }) %>" data-method="post" class="level-item is-like">
                             <span class="icon"><i class="far fa-heart"></i></span>
                             </a>
                         <% end %>
                     <% end %>
                     
                     <% if user_signed_in? && current_user.id == post.user_id %>
-                        <a href="<%= edit_post_path(post) %>" class="level-item">
-                        <span class="icon"><i class="far fa-edit"></i></span>
+                        <a class="level-item edit-post-button">
+                            <span class="icon"><i class="far fa-edit"></i></span>
                         </a>
                         <a href="<%= post_path(post) %>" class="level-item" data-method="delete" data-confirm="Are you sure you want to delete this post?">
                         <span class="icon has-text-danger"><i class="far fa-trash-alt"></i></span>
@@ -51,7 +64,10 @@
                 </div>
             </nav>
 
-            <%= render partial: "comments/form", locals: { post_id: post.id } %>
+            <div class="container comment-form invisible">
+                <%= render partial: "comments/form", locals: { post_id: post.id } %>
+            </div>
+
             <br>
 
             <% if post.comments.any? %>
