add user account deletion feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,12 +82,12 @@
       </div>
     </nav>
     <% if notice%>
-      <div class="notification is-primary">
+      <div class="notification is-primary mb-0">
         <%= flash[:notice] %>
       </div>
     <% end %>
     <% if alert %>
-      <div class="notification is-warning">
+      <div class="notification is-warning mb-0">
         <%= flash[:alert] %>
       </div>
     <% end %>
