--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -109,7 +109,7 @@
                 <% end %>
 
                 <% if @user.id == current_user.id %>
-                    <div class="columns is-mobile is-centered">
+                    <div class="columns is-mobile is-centered mt-3">
                         <div class="column is-narrow">
                             <a class="button is-danger is-small" id="delete-account-modal-open-button">
                                 <span class="icon is-small">
